--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/* extends */
+.contenedorBlanquiamento, .contenedorDisenio, .contenedorArmonia {
+  background-color: black;
+  color: antiquewhite;
+  padding: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
 /* estilos de para los 5 html */
 /*Reset*/
 * {
@@ -6,6 +15,8 @@
   box-sizing: border-box; }
 
 .boton {
+  color: #b4918f;
+  background-color: #b4918f;
   margin-left: auto;
   margin-right: auto; }
 
@@ -68,7 +79,8 @@ footer {
 
 /* En el header use flex como layout */
 header {
-  background-color: #C0BACB; }
+  background-image: url(fondoHeaderFooter.jpg);
+  /* background-color: black; */ }
 
 header h1 {
   display: none; }
@@ -76,7 +88,7 @@ header h1 {
 .contenedorLogo {
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid beige; }
+  border-bottom: 2px solid #b4918f; }
 
 header img {
   width: 21%; }
@@ -84,7 +96,7 @@ header img {
 .menu__lista a {
   /* retira el subrayado de los links (a) */
   text-decoration: none;
-  color: black; }
+  color: #b4918f; }
 
 header nav ul li {
   font-family: 'Merriweather', serif;
@@ -99,32 +111,34 @@ header nav ul li {
   background-color: beige; }
 
 body {
-  background-color: beige; }
+  background-color: #b4918f; }
 
 main {
   font-family: 'Merriweather', serif; }
 
 footer {
-  background-color: #C0BACB;
+  background-image: url(fondoHeaderFooter.jpg);
   font-family: 'Merriweather', serif; }
 
 .logoFooter img {
   width: 100%; }
 
-.logoEmail img {
-  width: 30%; }
+.logoEmail {
+  color: #b4918f; }
+  .logoEmail img {
+    width: 50%; }
 
 .logoRedes1 img {
-  width: 40%; }
+  width: 60%; }
 
 .logoRedes2 img {
-  width: 40%; }
+  width: 60%; }
 
 .logoRedes3 img {
-  width: 40%; }
+  width: 60%; }
 
 .logoRedes4 img {
-  width: 40%; }
+  width: 60%; }
 
 /* fin de los estilos de para los 5 html */
 /* index */
@@ -133,6 +147,7 @@ main img {
   padding: 1rem; }
 
 .sub1 {
+  font-weight: bolder;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin-left: 1rem;
@@ -144,6 +159,7 @@ main img {
   text-align: justify; }
 
 .sub2 {
+  font-weight: bolder;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin-left: 1rem;
@@ -158,12 +174,13 @@ main img {
   padding: 1rem 1.5rem;
   margin: 1.5rem;
   background: whitesmoke;
+  font-weight: bolder;
   color: black;
   border-radius: 5px;
   outline: 0;
   border: 0;
   text-decoration: none;
-  box-shadow: 4px 4px 0 #C0BACB;
+  box-shadow: 4px 4px 0 black;
   cursor: pointer;
   transition: 0.3s;
   width: 30%; }
@@ -176,9 +193,7 @@ main img {
   display: grid;
   grid-template-columns: 0.5fr 1fr;
   grid-template-rows: 0.5fr 0.5fr 0.25;
-  grid-template-areas: "imagen parrafo1" 
- "imagen parrafo2"
- "imagen boton";
+  grid-template-areas: "imagen parrafo1"  "imagen parrafo2" "imagen boton";
   column-gap: 1rem; }
 
 .imagen-inicio {
@@ -189,7 +204,7 @@ main img {
 .parrafo1-inicio {
   padding: 1.5rem;
   grid-area: parrafo1;
-  border-bottom: 2px groove; }
+  border-bottom: 2px solid black; }
 
 .parrafo2-inicio {
   padding: 1.5rem;
@@ -200,14 +215,212 @@ main img {
   justify-self: center; }
 
 /* fin index */
+/* Tatiana C Duran */
+.titulo2 {
+  font-weight: bolder;
+  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Mono', monospace;
+  margin: 25px;
+  text-align: center; }
+
+.bloque1 {
+  background-color: black;
+  padding: 15px; }
+
+.bloque1__titulo1 {
+  color: #b4918f;
+  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Mono', monospace;
+  margin-left: 35px; }
+
+.bloque1__titulo1--sub {
+  color: antiquewhite;
+  margin-left: 25px;
+  margin-top: 8px; }
+
+.doctora-2 {
+  width: 75%; }
+
+.parrafo-1 {
+  margin: 25px;
+  padding-left: 35px; }
+
+.main-doctora {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 0.15fr 1fr 0.15fr 0.65fr;
+  grid-template-areas: "titulo titulo titulo" "bloque bloque bloque" "subti subti subti" "carrusel carrusel carrusel"; }
+
+.titulo2 {
+  grid-area: titulo; }
+
+.bloque1 {
+  grid-area: bloque; }
+
+.parrafoDoc2 {
+  grid-area: subti;
+  align-self: center; }
+
+.carousel {
+  grid-area: carrusel;
+  width: 60%;
+  justify-self: center; }
+
+/* grid bloque1 */
+.bloque1 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto;
+  grid-template-areas: "imgBloc parrBloc"; }
+
+.contenedorImgDoc2 {
+  grid-area: imgBloc;
+  display: flex;
+  justify-content: center; }
+
+.contenedorParrafoBloque1 {
+  grid-area: parrBloc;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+/* fin Tatiana C Duran */
+/* inicio galeria */
+.tituloMulti {
+  font-weight: bolder;
+  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Mono', monospace;
+  margin: 35px; }
+
+.imgGaleria {
+  width: 70%; }
+
+.main-galeria {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 0.25fr repeat(2, 1fr);
+  grid-template-areas: "titGaleria titGaleria titGaleria" "galeria1 galeria2 galeria3" "galeria4 galeria5 galeria6";
+  align-items: center;
+  justify-items: center; }
+
+.tituloMulti {
+  grid-area: titGaleria; }
+
+.galeria1 {
+  grid-area: galeria1;
+  display: flex;
+  justify-content: center; }
+
+.galeria2 {
+  grid-area: galeria2;
+  display: flex;
+  justify-content: center; }
+
+.galeria3 {
+  grid-area: galeria3;
+  display: flex;
+  justify-content: center; }
+
+.galeria4 {
+  grid-area: galeria4;
+  display: flex;
+  justify-content: center; }
+
+.galeria5 {
+  grid-area: galeria5;
+  display: flex;
+  justify-content: center; }
+
+.galeria6 {
+  grid-area: galeria6;
+  display: flex;
+  justify-content: center; }
+
+/* fin galeria */
+/* inicio procedimientos */
+.titulos {
+  text-align: center;
+  color: #b4918f; }
+
+.imgDisenio img {
+  width: 55%; }
+
+.imgProcedimientos {
+  width: 65%; }
+
+.main-procedimientos {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: "parrBlanq imgBlanq" "imgDisenio parrDisenio" "parrArmonia imgArmonia";
+  align-items: center; }
+
+.contenedorBlanquiamento {
+  grid-area: parrBlanq; }
+
+.imgBlaqueamiento {
+  grid-area: imgBlanq;
+  display: flex;
+  justify-content: center; }
+
+.imgDisenio {
+  grid-area: imgDisenio;
+  display: flex;
+  justify-content: center; }
+
+.contenedorDisenio {
+  grid-area: parrDisenio; }
+
+.contenedorArmonia {
+  grid-area: parrArmonia; }
+
+.imgArmonia {
+  grid-area: imgArmonia;
+  display: flex;
+  justify-content: center; }
+
+/* fin procedimientos */
+/* contacto */
+form {
+  margin: 35px; }
+
+form fieldset {
+  padding: 15px; }
+
+form fieldset legend {
+  font-weight: bold;
+  padding: 15px;
+  display: flex;
+  justify-content: center; }
+
+form fieldset div {
+  padding: 2.5px;
+  margin: 2.5px;
+  display: flex;
+  justify-content: center; }
+
+form fieldset textarea {
+  padding: 5px; }
+
+.titulo-contacto {
+  color: black;
+  font-size: 27px;
+  padding: 10px; }
+
+.btn {
+  background-color: black;
+  border: black;
+  color: antiquewhite; }
+
+/* fin contacto */
 /* media queries para TODOS LOS HTML*/
 /* Celulares*/
 @media screen and (max-width: 576px) {
   footer {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1.5fr 1fr 1fr;
-    grid-template-areas: "email red1 red2" 
- "email red3 red4"; }
+    grid-template-areas: "email red1 red2"  "email red3 red4"; }
   .logoFooter {
     display: none; }
   .logoEmail {
@@ -242,8 +455,7 @@ main img {
   footer {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 0.5fr 0.5fr;
-    grid-template-areas: "logo email red1 red2"
- "logo email red3 red4"; } }
+    grid-template-areas: "logo email red1 red2" "logo email red3 red4"; } }
 
 /* desde tableta hasta escritorio iconos del footer mas pequenios */
 @media (min-width: 768px) {
@@ -251,19 +463,19 @@ main img {
     width: 70%;
     justify-self: center; }
   .logoEmail {
-    width: 50%;
+    width: 60%;
     justify-self: center; }
   .logoRedes1 {
-    width: 50%;
+    width: 60%;
     justify-self: center; }
   .logoRedes2 {
-    width: 50%;
+    width: 60%;
     justify-self: center; }
   .logoRedes3 {
-    width: 50%;
+    width: 60%;
     justify-self: center; }
   .logoRedes4 {
-    width: 50%;
+    width: 60%;
     justify-self: center; } }
 
 /* fin de los media queries para TODOS LOS HTML*/
@@ -273,10 +485,7 @@ main img {
   .main-inicio {
     grid-template-columns: auto;
     grid-template-rows: auto;
-    grid-template-areas: "imagen " 
- "parrafo1"
- "parrafo2"
- "boton"; }
+    grid-template-areas: "imagen "  "parrafo1" "parrafo2" "boton"; }
   .imagen-inicio {
     grid-area: imagen;
     display: flex;
@@ -299,10 +508,7 @@ main img {
   .main-inicio {
     grid-template-columns: auto;
     grid-template-rows: auto;
-    grid-template-areas: "imagen " 
- "parrafo1"
- "parrafo2"
- "boton"; }
+    grid-template-areas: "imagen "  "parrafo1" "parrafo2" "boton"; }
   .imagen-inicio {
     display: flex;
     justify-content: center; } }
@@ -312,9 +518,7 @@ main img {
   .main-inicio {
     grid-template-columns: 1fr 0.85fr;
     grid-template-rows: auto;
-    grid-template-areas: "imagen parrafo1"
- "imagen parrafo2"
- "imagen boton"; }
+    grid-template-areas: "imagen parrafo1" "imagen parrafo2" "imagen boton"; }
   .imagen-inicio {
     display: flex;
     justify-content: center;
@@ -328,3 +532,67 @@ main img {
     height: 40%; } }
 
 /* fin media queries index */
+/* media queries Doctora Tatiana */
+/* Celulares */
+@media screen and (max-width: 576px) {
+  .main-doctora {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "titulo" "bloque" "subti" "carrusel"; }
+  .bloque1 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "imgBloc" "parrBloc"; }
+  .carousel {
+    width: 90%; } }
+
+/*tabletas*/
+@media (max-width: 991px) and (min-width: 576px) {
+  .main-doctora {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "titulo" "bloque" "subti" "carrusel"; }
+  .bloque1 {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "imgBloc" "parrBloc"; }
+  .carousel {
+    width: 90%; } }
+
+/* fin media queries Doctora Tatiana */
+/* media queries galeria */
+/* celulares*/
+@media screen and (max-width: 576px) {
+  .main-galeria {
+    grid-template-columns: auto;
+    grid-template-rows: 0.25fr repeat(6, 1fr);
+    grid-template-areas: "titGaleria" "galeria1" "galeria2" "galeria3" "galeria4" "galeria5" "galeria6"; } }
+
+/* tabletas*/
+@media (max-width: 991px) and (min-width: 576px) {
+  .main-galeria {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.25fr repeat(3, 1fr);
+    grid-template-areas: "titGaleria titGaleria" "galeria1 galeria2" "galeria3 galeria4" "galeria5 galeria6"; } }
+
+/* fin media queries galeria */
+/* media queries procedimientos */
+/* celulares pequenios */
+@media (max-width: 576px) {
+  .main-procedimientos {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas: "parrBlanq" "imgBlanq" "parrDisenio" "imgDisenio" "parrArmonia" "imgArmonia"; } }
+
+/* tabletas pequenias */
+@media (max-width: 991px) and (min-width: 576px) {
+  .main-procedimientos {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas: "parrBlanq" "imgBlanq" "parrDisenio" "imgDisenio" "parrArmonia" "imgArmonia"; } }
+
+/* fin media queries procedimientos */
