--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -7,6 +7,7 @@ main{
 }
 
 .sub1{
+    font-weight: bolder;
     font-family: 'Merriweather', serif;
     font-family: 'Roboto Mono', monospace;
     margin-left: 1rem;
@@ -20,6 +21,7 @@ main{
 }
 
 .sub2{
+    font-weight: bolder;
     font-family: 'Merriweather', serif;
     font-family: 'Roboto Mono', monospace;
     margin-left: 1rem;
@@ -35,13 +37,14 @@ main{
 .button{
 	padding: 1rem 1.5rem;
     margin: 1.5rem;
-    background: whitesmoke;
-    color: black;
-    border-radius: 5px;
+    background: map-get($map: $boton-index, $key: fondoBoton );
+    font-weight: bolder;
+    color: map-get($map: $boton-index, $key: colorTexto );
+    border-radius: map-get($map: $boton-index, $key: bordeRedondeado );
     outline: 0;
     border: 0;
     text-decoration: none;
-    box-shadow: 4px 4px 0 $color-principal;
+    box-shadow: map-get($map: $boton-index, $key: sombraBoton );;
     cursor: pointer;
     transition: 0.3s;
     width: 30%;
@@ -73,7 +76,7 @@ main{
 .parrafo1-inicio{
     padding: 1.5rem;
     grid-area: parrafo1;
-    border-bottom: 2px groove;
+    border-bottom: 2px solid $color-secundario;
 }
 
 .parrafo2-inicio{
