--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
   box-sizing: border-box; }
 
 .boton {
-  color: #b4918f;
-  background-color: #b4918f;
+  color: #dda9a4;
+  background-color: #dda9a4;
   margin-left: auto;
   margin-right: auto; }
 
@@ -47,29 +47,29 @@ footer {
   display: flex;
   justify-content: center; }
 
-.logoEmail {
+.logoEmail a {
   grid-area: email;
   flex-direction: column;
   display: flex;
   justify-content: center;
   align-items: center; }
 
-.logoRedes1 {
+.logoRedes1 a {
   grid-area: red1;
   display: flex;
   justify-content: center; }
 
-.logoRedes2 {
+.logoRedes2 a {
   grid-area: red2;
   display: flex;
   justify-content: center; }
 
-.logoRedes3 {
+.logoRedes3 a {
   grid-area: red3;
   display: flex;
   justify-content: center; }
 
-.logoRedes4 {
+.logoRedes4 a {
   grid-area: red4;
   display: flex;
   justify-content: center; }
@@ -88,7 +88,7 @@ header h1 {
 .contenedorLogo {
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid #b4918f; }
+  border-bottom: 2px solid #dda9a4; }
 
 header img {
   width: 21%; }
@@ -96,7 +96,7 @@ header img {
 .menu__lista a {
   /* retira el subrayado de los links (a) */
   text-decoration: none;
-  color: #b4918f; }
+  color: #dda9a4; }
 
 header nav ul li {
   font-family: 'Merriweather', serif;
@@ -111,7 +111,7 @@ header nav ul li {
   background-color: beige; }
 
 body {
-  background-color: #b4918f; }
+  background-color: #dda9a4; }
 
 main {
   font-family: 'Merriweather', serif; }
@@ -124,7 +124,7 @@ footer {
   width: 100%; }
 
 .logoEmail {
-  color: #b4918f; }
+  color: #dda9a4; }
   .logoEmail img {
     width: 50%; }
 
@@ -142,33 +142,39 @@ footer {
 
 /* fin de los estilos de para los 5 html */
 /* index */
-main img {
-  width: 75%;
-  padding: 1rem; }
+.imagen-inicio img {
+  width: 90%;
+  margin: 0.35rem;
+  padding: 1rem;
+  background-color: #141414; }
 
 .sub1 {
   font-weight: bolder;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin-left: 1rem;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  color: #dda9a4; }
 
 .parrafo1 {
   margin-left: 15px;
   margin-bottom: 20px;
-  text-align: justify; }
+  text-align: justify;
+  color: antiquewhite; }
 
 .sub2 {
   font-weight: bolder;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin-left: 1rem;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  color: #dda9a4; }
 
 .parrafo2 {
   margin-left: 1rem;
   margin-bottom: 1rem;
-  text-align: justify; }
+  text-align: justify;
+  color: antiquewhite; }
 
 .button {
   padding: 1rem 1.5rem;
@@ -184,6 +190,9 @@ main img {
   cursor: pointer;
   transition: 0.3s;
   width: 30%; }
+  .button a {
+    text-decoration: none;
+    color: black; }
 
 .button:active {
   transform: translate(4px, 4px);
@@ -191,10 +200,9 @@ main img {
 
 .main-inicio {
   display: grid;
-  grid-template-columns: 0.5fr 1fr;
-  grid-template-rows: 0.5fr 0.5fr 0.25;
-  grid-template-areas: "imagen parrafo1"  "imagen parrafo2" "imagen boton";
-  column-gap: 1rem; }
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas: "imagen parrafo1 parrafo1"  "imagen parrafo2 parrafo2" "imagen boton boton"; }
 
 .imagen-inicio {
   grid-area: imagen;
@@ -202,11 +210,16 @@ main img {
   align-items: center; }
 
 .parrafo1-inicio {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  background-color: #141414;
   padding: 1.5rem;
-  grid-area: parrafo1;
-  border-bottom: 2px solid black; }
+  grid-area: parrafo1; }
 
 .parrafo2-inicio {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  background-color: #141414;
   padding: 1.5rem;
   grid-area: parrafo2; }
 
@@ -221,14 +234,15 @@ main img {
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin: 25px;
-  text-align: center; }
+  text-align: center;
+  align-self: center; }
 
 .bloque1 {
   background-color: black;
   padding: 15px; }
 
 .bloque1__titulo1 {
-  color: #b4918f;
+  color: #dda9a4;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
   margin-left: 35px; }
@@ -258,13 +272,19 @@ main img {
   grid-area: bloque; }
 
 .parrafoDoc2 {
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Mono', monospace;
   grid-area: subti;
-  align-self: center; }
+  align-self: center;
+  font-size: 1.2rem;
+  font-weight: bolder; }
 
 .carousel {
   grid-area: carrusel;
   width: 60%;
-  justify-self: center; }
+  justify-self: center;
+  padding: 1rem; }
 
 /* grid bloque1 */
 .bloque1 {
@@ -291,57 +311,29 @@ main img {
   font-weight: bolder;
   font-family: 'Merriweather', serif;
   font-family: 'Roboto Mono', monospace;
-  margin: 35px; }
+  margin: 35px;
+  text-align: center; }
 
 .imgGaleria {
-  width: 70%; }
+  width: 100%;
+  margin-top: 5px; }
 
-.main-galeria {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 0.25fr repeat(2, 1fr);
-  grid-template-areas: "titGaleria titGaleria titGaleria" "galeria1 galeria2 galeria3" "galeria4 galeria5 galeria6";
-  align-items: center;
-  justify-items: center; }
-
-.tituloMulti {
-  grid-area: titGaleria; }
-
-.galeria1 {
-  grid-area: galeria1;
+.rowGaleria {
   display: flex;
-  justify-content: center; }
+  flex-wrap: wrap;
+  padding: 5px; }
 
-.galeria2 {
-  grid-area: galeria2;
-  display: flex;
-  justify-content: center; }
-
-.galeria3 {
-  grid-area: galeria3;
-  display: flex;
-  justify-content: center; }
-
-.galeria4 {
-  grid-area: galeria4;
-  display: flex;
-  justify-content: center; }
-
-.galeria5 {
-  grid-area: galeria5;
-  display: flex;
-  justify-content: center; }
-
-.galeria6 {
-  grid-area: galeria6;
-  display: flex;
-  justify-content: center; }
+.columnGaleria {
+  flex: 25%;
+  padding: 5px; }
 
 /* fin galeria */
 /* inicio procedimientos */
 .titulos {
   text-align: center;
-  color: #b4918f; }
+  color: #dda9a4;
+  font-family: 'Merriweather', serif;
+  font-family: 'Roboto Mono', monospace; }
 
 .imgDisenio img {
   width: 55%; }
@@ -351,7 +343,7 @@ main img {
 
 .main-procedimientos {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas: "parrBlanq imgBlanq" "imgDisenio parrDisenio" "parrArmonia imgArmonia";
   align-items: center; }
@@ -362,7 +354,8 @@ main img {
 .imgBlaqueamiento {
   grid-area: imgBlanq;
   display: flex;
-  justify-content: center; }
+  justify-content: end;
+  width: 80%; }
 
 .imgDisenio {
   grid-area: imgDisenio;
@@ -378,7 +371,8 @@ main img {
 .imgArmonia {
   grid-area: imgArmonia;
   display: flex;
-  justify-content: center; }
+  justify-content: end;
+  width: 80%; }
 
 /* fin procedimientos */
 /* contacto */
@@ -386,7 +380,8 @@ main img {
   display: none; }
 
 form {
-  margin: 35px; }
+  margin: 35px;
+  grid-area: formulario; }
 
 form fieldset {
   padding: 15px; }
@@ -415,6 +410,15 @@ form fieldset textarea {
   background-color: black;
   border: black;
   color: antiquewhite; }
+
+.mapaGoogle {
+  grid-area: mapa;
+  background-color: #141414;
+  margin: 1.5rem; }
+  .mapaGoogle .tituloMap {
+    background-color: black;
+    color: aliceblue;
+    font-size: 1.5rem; }
 
 /* fin contacto */
 /* media queries para TODOS LOS HTML*/
@@ -519,20 +523,19 @@ form fieldset textarea {
 /* escritorios */
 @media (min-width: 992px) {
   .main-inicio {
-    grid-template-columns: 1fr 0.85fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
-    grid-template-areas: "imagen parrafo1" "imagen parrafo2" "imagen boton"; }
+    grid-template-areas: "imagen parrafo1 parrafo1" "imagen parrafo2 parrafo2" "imagen boton boton"; }
   .imagen-inicio {
     display: flex;
     justify-content: center;
-    align-self: center; }
-  .parrafo1-inicio {
-    margin-right: 1rem; }
-  .parrafo2-inicio {
-    margin-right: 1rem; }
+    align-self: center;
+    width: 90%; }
   .button {
-    width: 40%;
-    height: 40%; } }
+    width: 17%;
+    height: 50%; }
+  .mapaGoogle {
+    grid-area: map; } }
 
 /* fin media queries index */
 /* media queries Doctora Tatiana */
@@ -570,17 +573,13 @@ form fieldset textarea {
 /* media queries galeria */
 /* celulares*/
 @media screen and (max-width: 576px) {
-  .main-galeria {
-    grid-template-columns: auto;
-    grid-template-rows: 0.25fr repeat(6, 1fr);
-    grid-template-areas: "titGaleria" "galeria1" "galeria2" "galeria3" "galeria4" "galeria5" "galeria6"; } }
+  .columnGaleria {
+    flex: 100%; } }
 
 /* tabletas*/
 @media (max-width: 991px) and (min-width: 576px) {
-  .main-galeria {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.25fr repeat(3, 1fr);
-    grid-template-areas: "titGaleria titGaleria" "galeria1 galeria2" "galeria3 galeria4" "galeria5 galeria6"; } }
+  .columnGaleria {
+    flex: 50%; } }
 
 /* fin media queries galeria */
 /* media queries procedimientos */
@@ -599,3 +598,19 @@ form fieldset textarea {
     grid-template-areas: "parrBlanq" "imgBlanq" "parrDisenio" "imgDisenio" "parrArmonia" "imgArmonia"; } }
 
 /* fin media queries procedimientos */
+/* media queries contacto */
+/* celulares pequenios */
+@media (max-width: 576px) {
+  .container-fluids {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "formulario" "mapa"; } }
+
+/* tabletas pequenias */
+@media (max-width: 1100px) and (min-width: 576px) {
+  .container-fluid {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "formulario" "mapa"; } }
+
+/* fin media queries contacto*/
