--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,8 +1,10 @@
 /* index */
-main{
+.imagen-inicio{
     img{
-        width: 75%;
+        width: 90%;
+        margin: 0.35rem;
         padding: 1rem;
+        background-color: rgb(20, 20, 20);
     }
 }
 
@@ -12,12 +14,14 @@ main{
     font-family: 'Roboto Mono', monospace;
     margin-left: 1rem;
     margin-bottom: 1rem;
+    color: $color-primario;
 }
 
 .parrafo1{
     margin-left: 15px;
     margin-bottom: 20px;
     text-align: justify;
+    color: antiquewhite;
 }
 
 .sub2{
@@ -26,12 +30,14 @@ main{
     font-family: 'Roboto Mono', monospace;
     margin-left: 1rem;
     margin-bottom: 1rem;
+    color: $color-primario;
 }
 
 .parrafo2{
     margin-left: 1rem;
     margin-bottom: 1rem;
     text-align: justify;
+    color: antiquewhite;
 }
 
 .button{
@@ -48,6 +54,10 @@ main{
     cursor: pointer;
     transition: 0.3s;
     width: 30%;
+    a{
+        text-decoration: none;
+        color: black;
+    }
 }
 
 .button:active {
@@ -59,12 +69,11 @@ main{
 
 .main-inicio{
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
-    grid-template-rows: 0.5fr 0.5fr 0.25;
-    grid-template-areas: "imagen parrafo1" 
-                         "imagen parrafo2"
-                         "imagen boton";
-    column-gap: 1rem;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas: "imagen parrafo1 parrafo1" 
+                         "imagen parrafo2 parrafo2"
+                         "imagen boton boton";
 }
 
 .imagen-inicio{
@@ -74,12 +83,17 @@ main{
 }
 
 .parrafo1-inicio{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    background-color: rgb(20, 20, 20);
     padding: 1.5rem;
     grid-area: parrafo1;
-    border-bottom: 2px solid $color-secundario;
 }
 
 .parrafo2-inicio{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    background-color: rgb(20, 20, 20);
     padding: 1.5rem;
     grid-area: parrafo2;
 }
