--- a/scss/utilities/_mediaQueries.scss
+++ b/scss/utilities/_mediaQueries.scss
@@ -2,7 +2,6 @@
 /* media queries para TODOS LOS HTML*/
 /* Celulares*/
 @media screen and (max-width:576px){
-
     footer{
 
         grid-template-rows:  1fr 1fr;
@@ -165,32 +164,29 @@
 
 @media (min-width:992px){
     .main-inicio{
-        grid-template-columns: 1fr 0.85fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto;
-        grid-template-areas: "imagen parrafo1"
-                             "imagen parrafo2"
-                             "imagen boton";
+        grid-template-areas: "imagen parrafo1 parrafo1"
+                             "imagen parrafo2 parrafo2"
+                             "imagen boton boton";
     }
 
     .imagen-inicio{
         display: flex;
         justify-content: center;
         align-self: center;
-    }
-
-    .parrafo1-inicio{
-        margin-right: 1rem;
-    }
-
-    .parrafo2-inicio{
-        margin-right: 1rem;
+        width: 90%;
     }
 
     .button{
-        width: 40%;
-        height: 40%;
-    }    
-}
+        width: 17%;
+        height: 50%;
+    } 
+    
+    .mapaGoogle{
+        grid-area: map;  
+    }
+} 
 /* fin media queries index */
 
 /* media queries Doctora Tatiana */
@@ -251,30 +247,17 @@
 
 /* celulares*/
 @media screen and (max-width:576px){
-    .main-galeria{
-        grid-template-columns: auto;
-        grid-template-rows: 0.25fr repeat(6, 1fr);
-        grid-template-areas: "titGaleria"
-                             "galeria1"
-                             "galeria2"
-                             "galeria3"
-                             "galeria4"
-                             "galeria5"
-                             "galeria6"; 
-     }
+    .columnGaleria{
+        flex: 100%;
+    }   
 }
 
 /* tabletas*/
-@media (max-width:991px) and (min-width:576px){
-    .main-galeria{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.25fr repeat(3, 1fr);
-        grid-template-areas: "titGaleria titGaleria"
-                             "galeria1 galeria2"
-                             "galeria3 galeria4"
-                             "galeria5 galeria6"; 
-     }
-}
+ @media (max-width:991px) and (min-width:576px){
+    .columnGaleria{
+        flex: 50%;
+    }   
+} 
 
 /* fin media queries galeria */
 /* media queries procedimientos */
@@ -306,3 +289,27 @@
     }
 }
 /* fin media queries procedimientos */
+
+/* media queries contacto */
+
+/* celulares pequenios */
+@media (max-width:576px){
+    .container-fluids{
+        grid-template-columns:auto;
+        grid-template-rows: auto;
+        grid-template-areas: "formulario"
+                             "mapa";
+    }
+}
+
+/* tabletas pequenias */
+@media (max-width:1100px) and (min-width:576px){
+    .container-fluid{
+        grid-template-columns:auto;
+        grid-template-rows: auto;
+        grid-template-areas: "formulario"
+                                  "mapa";
+    }
+}
+
+/* fin media queries contacto*/
